# illuminate-media-organizer

./: .gitignore  CHANGELOG.md  README.md  media_organizer_gui.py  media_searcher.py  media_sorter.py  pyproject.toml  requirements.txt  run_gui.py
docs/: MEDIUM_PRIORITY_OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md
src/: __init__.py  __version__.py  logger_config.py  media_organizer_gui.py  media_searcher.py  media_sorter.py  media_utils.py
tests/: test_media_utils.py
