[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "illuminate-media-organizer"
version = "1.0.0"
description = "Organize and search your media files by date, keywords, and ratings"
authors = [
    {name = "Shiue-Lang Chin"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
keywords = ["media", "photos", "videos", "exif", "organizer", "sorting", "search"]

[project.urls]
Homepage = "https://github.com/yourusername/illuminate-media-organizer"
Documentation = "https://github.com/yourusername/illuminate-media-organizer/blob/main/README.md"
Repository = "https://github.com/yourusername/illuminate-media-organizer"
"Bug Tracker" = "https://github.com/yourusername/illuminate-media-organizer/issues"

[project.scripts]
media-sorter = "src.media_sorter:main"
media-searcher = "src.media_searcher:main"
media-organizer-gui = "run_gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
